Added post request for proposal
